--- a/CBLauncher/App.config
+++ b/CBLauncher/App.config
@@ -19,6 +19,21 @@
             <setting name="LastJavawPID" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Setting" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="History" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="JavawPath" serializeAs="String">
+                <value>C:\Program Files\Java\jre7\bin\javaw.exe</value>
+            </setting>
+            <setting name="AutoArgs" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="NonAutoArgsText" serializeAs="String">
+                <value />
+            </setting>
         </CBLauncher.My.MySettings>
     </userSettings>
 </configuration>
