--- a/CBLauncher/My Project/Settings.settings
+++ b/CBLauncher/My Project/Settings.settings
@@ -11,5 +11,20 @@
     <Setting Name="LastJavawPID" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Setting" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="History" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="JavawPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">C:\Program Files\Java\jre7\bin\javaw.exe</Value>
+    </Setting>
+    <Setting Name="AutoArgs" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="NonAutoArgsText" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
