The performance update.
No more Timer checking continuously the state of the server and
refreshing the output log.
This was really hard. Almost everything has been recode to do this.
More speed and lower memory usage thanks to the use of delegates for
refreshing the output and AppendText method.

Other changes:
Better Server Properties GUI.
Server auto-starts when opened with a shortcut.
"More" button menu for auto-input commands, including Reload and
Weather.
More options in Settings.

--- a/CBLauncher/App.config
+++ b/CBLauncher/App.config
@@ -19,9 +19,6 @@
             <setting name="LastJavawPID" serializeAs="String">
                 <value />
             </setting>
-            <setting name="Setting" serializeAs="String">
-                <value />
-            </setting>
             <setting name="History" serializeAs="String">
                 <value />
             </setting>
@@ -33,6 +30,12 @@
             </setting>
             <setting name="NonAutoArgsText" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="AskBeforeExit" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ForceStop" serializeAs="String">
+                <value>True</value>
             </setting>
         </CBLauncher.My.MySettings>
     </userSettings>
