--- a/CBLauncher/My Project/Settings.settings
+++ b/CBLauncher/My Project/Settings.settings
@@ -11,9 +11,6 @@
     <Setting Name="LastJavawPID" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="Setting" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
     <Setting Name="History" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
@@ -25,6 +22,12 @@
     </Setting>
     <Setting Name="NonAutoArgsText" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AskBeforeExit" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="ForceStop" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
