Text font and color selector.
Also a new design for Add Favorite window.

--- a/CBLauncher/App.config
+++ b/CBLauncher/App.config
@@ -37,6 +37,15 @@
             <setting name="ForceStop" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="PersonalizedFont" serializeAs="String">
+                <value>Lucida Console, 8.25pt, style=Bold</value>
+            </setting>
+            <setting name="PersonalizedColor" serializeAs="String">
+                <value>LightGray</value>
+            </setting>
+            <setting name="PersonalizedBackColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
         </CBLauncher.My.MySettings>
     </userSettings>
 </configuration>
