--- a/CBLauncher/My Project/Settings.settings
+++ b/CBLauncher/My Project/Settings.settings
@@ -38,5 +38,11 @@
     <Setting Name="PersonalizedBackColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">Black</Value>
     </Setting>
+    <Setting Name="DefaultMaxMemory" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">1024</Value>
+    </Setting>
+    <Setting Name="ShowMaxMemory" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
