--- a/CBLauncher/App.config
+++ b/CBLauncher/App.config
@@ -35,7 +35,7 @@
                 <value>True</value>
             </setting>
             <setting name="ForceStop" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="PersonalizedFont" serializeAs="String">
                 <value>Lucida Console, 8.25pt, style=Bold</value>
