--- a/CBLauncher/My Project/Settings.settings
+++ b/CBLauncher/My Project/Settings.settings
@@ -27,7 +27,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="ForceStop" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="PersonalizedFont" Type="System.Drawing.Font" Scope="User">
       <Value Profile="(Default)">Lucida Console, 8.25pt, style=Bold</Value>
